objects/ServiceOrderContact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active, Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Contact_Status__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ServiceOrderContacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ServiceOrderContacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Frequency__c</fullName>
        <formula>TEXT(Payer_Contact__r.Email_Notification_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Notification Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Payer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_ServiceOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From ServiceOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inserted_Account_contact_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inserted Account contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Preferences__c</fullName>
        <formula>TEXT(Payer_Contact__r.Language_Preferences__c)</formula>
        <label>Language Preferences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Payer_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ServiceOrderContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Contact_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payer Contact Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR 5) AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Payer_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Contact_Status__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ServiceOrderContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>ServiceOrderContacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_SMS_Notification_Frequency__c</fullName>
        <description>Populating Contact Picklist value on Service order contact.</description>
        <formula>TEXT(Payer_Contact__r.Text_SMS_Notification_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text (SMS) Notification Frequency</label>
        <type>Text</type>
    </fields>
    <label>Communication Recipient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>